# table-dependency-scanner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
src/rewards_scanner/: __init__.py  __main__.py  cli.py  file_collector.py  inflection.py  models.py  output.py  repo.py  runner.py  server.py
src/rewards_scanner/scanners/: __init__.py  base.py  contextual_scanner.py  migration_scanner.py  model_scanner.py  polymorphic_scanner.py  raw_sql_scanner.py  schema_scanner.py
src/rewards_scanner/static/: index.html
src/table_scanner/: __main__.py  cli.py  inflection.py  models.py  output.py  repo.py  runner.py  server.py
src/table_scanner/scanners/: base.py  config_scanner.py  contextual_scanner.py  migration_scanner.py  model_scanner.py  polymorphic_scanner.py  raw_sql_scanner.py  schema_scanner.py
src/table_scanner/static/: index.html
